try to fix dashboard logo taking up all space on mobile

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 }
 
 .sidebarTop .Logo{
-    height: 90%;
+    height: 50px;
 }
 
 .Logo {
